SERVER-20738 Enforce ascending order of 'lastRecord' in oplog stones.

Skip creating a new stone when the record's position comes before the
most recently created stone.